<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fefefe"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/mtoplayout"
            android:layout_width="fill_parent"
            android:layout_height="136dp"
            android:background="@drawable/mbg" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/text_maintab"
                android:textColor="#333333"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/binzhoucm"
                android:textColor="#ffffff"
                android:textSize="26sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3" >

            <LinearLayout
                android:id="@+id/searchlayout"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:clickable="false"
                android:gravity="center"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/schrltlayout"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/circleborder"
                    android:clickable="true" >

                    <ImageButton
                        android:id="@+id/searchbt"
                        android:layout_width="30dp"
                        android:layout_height="38dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/mdetect"
                        android:clickable="false"
                        android:contentDescription="@string/ctDscrip" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:contentDescription="@string/ctDscrip"
                    android:text="@string/searchall"
                    android:textColor="#5e5a58"
                    android:textIsSelectable="false"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- <LinearLayout
                android:id="@+id/addrlayout"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:clickable="false"
                android:gravity="center"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/addrrltlayout"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/contactborder"
                    android:clickable="true" >

                    <ImageButton
                        android:id="@+id/addrbt"
                        android:layout_width="30dp"
                        android:layout_height="38dp"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/mcontact"
                        android:clickable="false"
                        android:contentDescription="@string/ctDscrip" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/addrbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:contentDescription="@string/ctDscrip"
                    android:text="@string/staffAddr"
                    android:textColor="#5e5a58"
                    android:textIsSelectable="false"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout> -->

            <!-- <LinearLayout
                android:id="@+id/qeurylayout"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/qeuryborder" >
                </RelativeLayout>

                <TextView
                    android:id="@+id/qeury"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:contentDescription="@string/ctDscrip"
                    android:text="@string/qeury"
                    android:textColor="#5e5a58"
                    android:textIsSelectable="false"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout> -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3" >

           <!--  <LinearLayout
                android:id="@+id/tariffservlayout"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/tariffservborder" >
                </RelativeLayout>

                <TextView
                    android:id="@+id/tariffserv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:contentDescription="@string/ctDscrip"
                    android:text="@string/tariffserv"
                    android:textColor="#5e5a58"
                    android:textIsSelectable="false"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout> -->

           <!--  <LinearLayout
                android:id="@+id/registlayout"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/registborder" >
                </RelativeLayout>

                <TextView
                    android:id="@+id/regist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:contentDescription="@string/ctDscrip"
                    android:text="@string/regist"
                    android:textColor="#5e5a58"
                    android:textIsSelectable="false"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
 -->
           <!--  <LinearLayout
                android:id="@+id/guidlayout"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/guidborder" >
                </RelativeLayout>

                <TextView
                    android:id="@+id/guid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:contentDescription="@string/ctDscrip"
                    android:text="@string/guid"
                    android:textColor="#5e5a58"
                    android:textIsSelectable="false"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout> -->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/updatetiplayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/updatecontent"
                android:textColor="#6072ad"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/updatetips"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="#ffd7a6"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/updatetip"
                android:textColor="#000000"
                android:textIsSelectable="true" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>